# beagle-lib

./: CMakeLists.txt  meson.build  meson.options
.github/workflows/: build.yml
examples/: CMakeLists.txt  meson.build
examples/actiontest/: actiontest.cpp
java/beagle/: Beagle.java  BeagleFlag.java  BeagleJNIImpl.java  BeagleJNIWrapper.java  GeneralBeagleImpl.java
libhmsbeagle/: BeagleImpl.h  CMakeLists.txt  beagle.cpp  beagle.h  meson.build
libhmsbeagle/CPU/: BeagleCPU4StateAVXImpl.h  BeagleCPU4StateAVXImpl.hpp  BeagleCPU4StateImpl.h  BeagleCPU4StateImpl.hpp  BeagleCPU4StateSSEImpl.h  BeagleCPU4StateSSEImpl.hpp  BeagleCPUAVXImpl.h  BeagleCPUAVXImpl.hpp  BeagleCPUActionImpl.h  BeagleCPUActionImpl.hpp  BeagleCPUImpl.h  BeagleCPUImpl.hpp  BeagleCPUSSEImpl.h  BeagleCPUSSEImpl.hpp  BeagleCPUSSEPlugin.cpp  CMakeLists.txt  meson.build
libhmsbeagle/GPU/: ActionCUDAPlugin.cpp  ActionCUDAPlugin.cu  ActionCUDAPlugin.h  BeagleGPUActionImpl.h  BeagleGPUActionImpl.hpp  BeagleGPUImpl.h  BeagleGPUImpl.hpp  CMakeLists.txt  GPUInterfaceCUDA.cpp  KernelLauncher.cpp  cuda_ops.cu  cuda_ops.h
libhmsbeagle/GPU/CMake_Action/: CMakeLists.txt
libhmsbeagle/JNI/: beagle_BeagleJNIWrapper.cpp  beagle_BeagleJNIWrapper.h
libhmsbeagle/benchmark/: BeagleBenchmark.cpp  BeagleBenchmark.h
